--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,49 @@
     <groupId>ru.rs</groupId>
     <artifactId>dao</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <parent>
+        <groupId>ru.rs</groupId>
+        <artifactId>general.app</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.derby</groupId>
+            <artifactId>derby</artifactId>
+            <version>${derby.version}</version>
+        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.hsqldb</groupId>-->
+            <!--<artifactId>hsqldb</artifactId>-->
+            <!--<version>${hsqldb.version}</version>-->
+        <!--</dependency>-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-orm</artifactId>
+            <version>4.1.1.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.persistence</groupId>
+            <artifactId>eclipselink</artifactId>
+            <version>2.5.2</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.8.2</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
+    <properties>
+        <derby.version>10.9.1.0</derby.version>
+        <hsqldb.version>2.3.2</hsqldb.version>
+    </properties>
 
 </project>
